ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/no_lambda_name.stderr
error: lambda needs a name
 --> tests/fails/no_lambda_name.rs:5:9
  |
5 |         lambda
  |         ^^^^^^
